Work_Space1/src/turtlesim_controller/log/build_2023-03-11_18-15-58/turtlesim_controller/stdout_stderr.log
running egg_info
writing build/turtlesim_controller/turtlesim_controller.egg-info/PKG-INFO
writing dependency_links to build/turtlesim_controller/turtlesim_controller.egg-info/dependency_links.txt
writing entry points to build/turtlesim_controller/turtlesim_controller.egg-info/entry_points.txt
writing requirements to build/turtlesim_controller/turtlesim_controller.egg-info/requires.txt
writing top-level names to build/turtlesim_controller/turtlesim_controller.egg-info/top_level.txt
reading manifest file 'build/turtlesim_controller/turtlesim_controller.egg-info/SOURCES.txt'
writing manifest file 'build/turtlesim_controller/turtlesim_controller.egg-info/SOURCES.txt'
running build
running build_py
copying turtlesim_controller/turtlesim_controller.py -> /home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/build/turtlesim_controller/build/lib/turtlesim_controller
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/build/turtlesim_controller/build/lib/turtlesim_controller/turtlesim_controller.py -> /home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/install/turtlesim_controller/lib/python3.10/site-packages/turtlesim_controller
byte-compiling /home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/install/turtlesim_controller/lib/python3.10/site-packages/turtlesim_controller/turtlesim_controller.py to turtlesim_controller.cpython-310.pyc
running install_data
  File "/home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/install/turtlesim_controller/lib/python3.10/site-packages/turtlesim_controller/turtlesim_controller.py", line 5
    from turtlesim.msg._pose
                            ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/install/turtlesim_controller/lib/python3.10/site-packages/turtlesim_controller-0.0.0-py3.10.egg-info' (and everything under it)
Copying build/turtlesim_controller/turtlesim_controller.egg-info to /home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/install/turtlesim_controller/lib/python3.10/site-packages/turtlesim_controller-0.0.0-py3.10.egg-info
running install_scripts
Installing turtlesim_controller script to /home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/install/turtlesim_controller/lib/turtlesim_controller
writing list of installed files to '/home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/build/turtlesim_controller/install.log'
